<resources>
    <string name="app_name">Pizzeria_Juanito</string>
    <string name="txtPizza">Pizza Pequeña</string>
    <string name="txtNombre">Ingrese Su Nombre</string>
    <string name="txtAddess">Ingrese Su Dirección</string>
    <string name="txtpass">Ingrese Su Contraseña</string>
    <string name="txtConfirmarPass">Confirme su Contraseña</string>
    <string name="txtlog">Registros</string>
    <string name="Informacion">Esta aplicación fue completamente desarrollada por: Melvin Josué Pereira Amaya.</string>
</resources>